--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 20px 40px;
-  font-family: 'Press Start 2P',
+  font-family: 'Roboto Condensed',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
