--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,828 @@
-body {
-  margin: 0;
-  padding: 20px 40px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media (min-width: 1024px) {
+  html[data-gender="men" i] .largeNavigation,
+  html[data-gender="women" i] .largeNavigation {
+    background-color: #525050;
+    display: block;
+    height: 50px;
+    position: relative;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-* {
+.banner {
+  background-color: #eee;
+  border-bottom: 1px solid #ddd;
   box-sizing: border-box;
+  display: block;
+  line-height: 50px;
+  position: relative;
+  width: 100%;
+  
+  button {
+    border: none;
+    width: 100%;
+    height: 100%;
+    margin: 0 16px;
+    
+  }
+}
+
+.blackIcon {
+  background-color: #000;
+}
+
+body {
+  color: #667;
+  display: flex;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0;
+  flex-direction: column;
+  position: relative;
+  font-family: 'Noto Sans Mono', Open Sans Condensed, sans-serif;
+  font-size: 100%;
+  letter-spacing: 0.4px;
+}
+
+.bodyText {
+  font-family: 'Noto Sans Mono', Open Sans Condensed, sans-serif;
+  font-size: .875rem;
+  letter-spacing: .4px;
+
+}
+
+.button {
+  border: none;
+  background-color: #2d2d2d;
+  color: #fff;
+  height: 100%;
+  line-height: 60px;
+  width: 100%;
+  border-style: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  padding: 0;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 2px;
+  font-weight: 900;
+  display: block;
+
+}
+
+.circleImageList {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(6, auto);
+  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+  column-gap: 20px;
+}
+
+.circleImageLink {
+  max-height: 52px;
+  width: 100%;
+
+  a {
+    display: flex;  
+    text-decoration: none;
+    align-items: center;
+  }
+}
+
+
+.circleImageBorder {
+  padding: 3px;
+  border: 1px solid #ddd;
+}
+
+.circleImage {
+  background-position: 0 0;
+  background-size: cover;
+
+  ._a {
+    background-image: url("https://images.asos-media.com/navigation/ww_global_topshop_480x480_1?&$n_240w$");
+  }
+}
+
+.circleImageBorder,
+.circleImage {
+  border-radius: 50%;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  vertical-align: middle;
+}
+
+.close {
+  cursor: pointer;
+  margin: 0px 5px;
+  padding: 0 12px;
+  mask-size: 19px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  overflow: hidden; 
+}
+
+.content__displayed {
+  display: flex;
+}
+
+.content-body {
+  background-color: #f8f8f8;
+  
+  
+}
+
+.countryFlag {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 1px solid #f8f8f8;
+  outline: 1px solid currentColor;
+  box-sizing: border-box;
+}
+
+.dropDown {
+  display: none;
+}
+
+.dropdown-content {
+  background-color: #fff;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  flex-shrink: 1;
+  display: grid;
+}
+
+.dropDownbody {
+  background-color: #fff;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  flex-shrink: 1;
+}
+
+html {
+  height: 100%;
+  text-size-adjust: 100%;
+}
+
+h3 {
+  font-family: futura-pt,sans-serif;
+  font-size: .875rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 900;
+  display: inline-flex;
+}
+
+.iconBtn {
+  background-color: transparent;
+  border: none;
+  color: currentcolor;
+  font-size: 0;
+  line-height: 0;
+
+  svg {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.innerWrapper {
+  flex-direction: column;
+  display: flex;
+  left: 0;
+  margin-bottom: 10px;
+  overflow: hidden;
+  position: relative;
+  right: 0;
+  top: 10px;
+  
+}
+
+.kontainer {
+  background-color: #525050;
+  display: block;
+  height: 50px;
+  position: relative;
+}
+
+.labelContainer {
+  display: flex;
+  height: 52px;
+  border-bottom: 1px solid #3d3d3d1a;
+  margin-left: 13px;
+  padding-left: 7px;
+  width: 100%;
+  justify-content: left;
+  align-items: center;
+}
+
+.label {
+  color: #667;
+  line-height: 20px;
+}
+
+.lightIcon {
+  background-color: #fff;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+}
+
+.link {
+  color: #667;
+  font-size: var(--standard-font-size);
+  border: none;
+  background-color: transparent;
+  font-family: var(--primary-font);
+  letter-spacing: 0.4px;
+  line-height: 2.14;
+  cursor: pointer;
+  white-space: nowrap;
+  text-decoration: none;
+  display: inline-block;
+  padding: 0 5px;
+  margin: 0 -5px;
+
+  svg {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.link:first-of-type {
+  border-top: none;
+}
+
+.link:last-of-type {
+  border-bottom: none;
+}
+
+.link:hover {
+  color: blue;
+}
+
+.medium {
+  font-size: 1.25rem;
+}
+
+#myaccount-dropdown {
+  left: -175px;
+
+  &::before {
+    left:185px
+  }
+
+  &:hover {
+    .dropDown{
+      display: block;
+    }
+    
+  }
+}
+
+.navigation {
+  margin: 0 auto;
+  max-width: 1366px;
+  padding: 0 32px;
+  box-sizing: border-box;
+  overflow: hidden;
+
+}
+
+.navButtons {
+  display: block;
+  height: 50px;
+}
+
+.navButton {
+  color: #fff;
+  letter-spacing: 0.8px;
+  line-height: 50px;
+  border: none;
+  padding: 0 10px;
+  background-color: #525050;
+  margin: 0;
+  outline: none;
+  border-radius: 0;
+}
+
+.navButton:hover,
+.navButton__active, .navButton:focus {
+  color: #2d2d2d;
+  background-color: #eee;
+  font-weight: 400;
+}
+
+.navButton__label {
+  position: relative;
+}
+
+.secondaryNav {
+  position: absolute;
+  width: 100%;
+  top: 50px;
+  left: 0;
+}
+
+.secondaryNavContainer {
+  width: 100%;
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
+.backdrop {
+  background-color: rgba(45,45,45,.65);
+  height: 100vh;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 11000;
+}
+
+.flyoutContainer {
+  width: 100%;
+  max-width: 1366px;
+  padding: 0 32px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.flyout {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 24px 10px;
+  background-color: #ddd;
+  position: relative;
+  z-index: 11000;
+  transition: min-height 200ms ease-in-out;
+  min-height: 0;
+}
+
+.colspan-1 {
+  flex: 1;
+  .textList {
+    width: 100%;
+  }
+}
+
+.textList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: top;
+  width: 190px;
+}
+
+.column {
+  box-sizing: border-box;
+  padding: 0 20px;
+  border-right: 1px solid #2d2d2d;
+}
+
+.column:last-child {
+  border-right: 0;
+}
+
+.columnHeader {
+  display: block;
+  padding-bottom: 5.5px;
+  margin-top: 0;
+  margin-bottom: 12px;
+  width: 100%;
+  font-weight: 900;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.navContainer {
+  display: inline-block;
+	border-bottom: none;
+	padding: 0;
+	width: 230px;
+  li {
+    border-bottom: none;
+    border-right: 1px solid #525050;
+    box-sizing: border-box;
+    width: 115px;
+    display: inline-block;
+    position: relative;
+    color: #fff;
+    height: 100%;
+    line-height: 60px;
+
+    &:first-of-type {
+      border-left: 1px solid #525050;
+    }
+  }
+}
+
+.outerWrapper {
+  max-height: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 50px;
+  transition: max-height var(--transitionDuration);
+  transition-delay: 250ms;
+  width: 325px;
+}
+
+.outerWrapper::before {
+  border-bottom: 11px solid var(--grey-20);
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  content: "";
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: opacity 500ms;
+  transition-delay: 250ms;
+  width: 0;
+  z-index: 1;
+}
+
+.pipe::before {
+  content: "|";
+  display: block;
+  padding: 0 0.5em;
+  color: #667;
+}
+
+.searchContainer {
+  display: inline-block;
+  flex-grow: 1;
+}
+
+.slideDown {
+  background-color: #fff;
+  border: 1px solid #667;
+  box-shadow: -2px 2px 4px 0 rgba(#2d2d2d, 0.14);
+  transform: translateY(calc(-100% - 5px));
+  transition: transform 500ms;
+  transition-delay: 250ms;
+  display: flex;
+  flex-direction: column;
+}
+
+.slideDownheader {
+  background-color: #eee;
+  box-sizing: border-box;
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  width: 100%;
+  z-index: 1;
+  flex-shrink: 0;
+}
+
+.slideDownfooter {
+  display: flex;
+  background-color: #eee;
+  flex-shrink: 0;
+  z-index: 1;
+}
+
+strong {
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+
+}
+
+.welcome {
+  font-size: 100%;
+  line-height: 18px;
+  letter-spacing: 1px;
+  font-weight: 900;
+  color: #000;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-right: 1em;
+}
+
+.widgets {
+  padding: 0;
+  margin: 0;
+  align-self: flex-end;
+  display: flex;
+}
+
+.widget-btn {
+  line-height: 50px;
+  max-height: 62px;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: block;
+  font-family: inherit;
+  padding: 12px 15px;
+  position: relative;
+  background-color: transparent;
+  border: none;
+  color: currentcolor;
+  font-size: 0;
+  line-height: 0;
+}
+
+.widget-container {
+  list-style: none;
+  color: #fff;
+  box-sizing: border-box;
+  width: 50px;
+  padding: 0;
+  display: inline-flex;
+}
+
+.widgetMyAccount {
+  font-size: 1.25rem; /* 50px, default icon height (based on base font-size 16px) */
+  display: inline-block;
+  color: currentcolor;
+  width: 3em;
+  height: 3em;
+  box-sizing: border-box;
+
+}
+
+.widgetIcon {
+  box-sizing: border-box;
+  color: #fff;
+  display: inline-flex;
+  list-style: none;
+  padding: 0;
+  width: 50px;
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+}
+
+.wrapper {
+  position: relative;
+  touch-action: none;
+  z-index: 10;
+  outline: none;
+  display: inline-block;
+
+  --transitionDurationValue: 600;
+  --transitionDuration: calc(600 * 1ms);
+  --transitionDelayValue: 250;
+  --transitionDelay: calc(250 * 1ms);
+}
+
+.src-GlobalBanner-Tooltip-Tooltip_hidden {
+  opacity:0;
+  transition:opacity .4s,visibility .4s;
+  transition-delay:.2s;
+  visibility:hidden
+}
+
+.src-GlobalBanner-Tooltip-Tooltip_wrapperCenter {
+  max-width:100%;
+  width:auto;
+  padding:0 16px;
+  margin:5px auto 0;
+  position:absolute;
+  left:50%;
+  top:50px;
+  transform:translate(-50%);
+  display:none;
+}
+
+.src-GlobalBanner-Tooltip-Tooltip_wrapperCenter,
+.src-GlobalBanner-Tooltip-Tooltip_wrapperLeft,
+.src-GlobalBanner-Tooltip-Tooltip_wrapperRight {
+  box-sizing:border-box;
+  transition-property:opacity,visiblity;
+  transition-duration:1s;
+  transition-timing-function:ease;
+  opacity:1;
+  visibility:visible;
+  z-index:100
+}
+
+.src-GlobalBanner-Tooltip-Tooltip_tooltip {
+  font-size:12px;
+  letter-spacing:.5px;
+  line-height:14px;
+  background:#f2f2f2;
+  padding:8px;
+  text-align:center;
+  box-shadow:3px 3px 0 hsla(0,0%,41%,.5);
+  text-transform:none;
+  box-sizing:border-box
+}
+.src-GlobalBanner-Tooltip-Tooltip_tooltip::before {
+  content:"";
+  width:0;
+  height:0;
+  border-left:5px solid transparent;
+  border-right:5px solid transparent;
+  border-bottom:5px solid #f2f2f2;
+  position:absolute;
+  top:-5px;
+  margin:0 auto;
+  left:0;
+  right:0
+}
+
+.src-GlobalBanner-Content-Content_copy {
+  text-align:center;
+  max-width:661px;
+  width:100%;
+  display:inline-block;
+  letter-spacing:.5px;
+  vertical-align:middle;
+  margin:auto;
+  box-sizing:border-box
+}
+
+
+
+.src-GlobalBanner-Content-Content_content {
+  background:none;
+  border:none;
+  width:100%;
+  height:100%;
+  margin:0;
+  line-height:16px
+}
+
+.src-GlobalBanner-Content-Content_contentCenter {
+  margin:0 16px;
+  font-family:Futura-pt,Futura STD,Arial,Verdana,sans-serif;
+  line-height:16px
+}
+
+.src-GlobalBanner-Unit-Unit_unit,
+.src-GlobalBanner-Unit-Unit_unitLink {
+  box-sizing:border-box;
+  text-align:center;
+  width:100%;
+  height:49px;
+  display:-ms-flexbox;
+  display:flex;
+  position:relative;
+  line-height:16px
+}
+
+.src-GlobalBanner-Button-Button_button {
+  height:30px;
+  font-size:13px;
+  font-weight:700;
+  width:100px;
+  border-radius:0;
+  display:block;
+  border:2px solid #fff;
+  box-sizing:border-box;
+  line-height:26px;
+  text-decoration:none;
+  color:#fff;
+  margin:9px 0;
+  cursor:pointer;
+  opacity:1;
+  transition:opacity .8s ease
+}
+.src-GlobalBanner-Button-Button_button:hover {
+  opacity:.5;
+  transition:opacity .8s ease
+}
+
+.src-GlobalBanner-Unit-Unit_unitCenter {
+  padding:0 32px;
+  
+}
+
+.src-GlobalBanner-Unit-Unit_unitCenter:hover {
+  .src-GlobalBanner-Tooltip-Tooltip_wrapperCenter {
+    display: inline-block;
+  }
+}
+
+.extended-nav {
+  background-color: #525050;
+  display: block;
+  height: 50px;
+  position: relative;
+}
+
+
+.container {
+  list-style: none;
+  margin: 0;
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid rgba(var(--asos-black-rgb), 0.1);
+  box-sizing: border-box;
+}
+
+.container__large {
+  display: none;
+}
+
+.container li, .container__small_and_medium button {
+  width: 50%;
+  position: relative;
+  display: inline-block;
+}
+
+.container__small_and_medium button:not(:last-of-type)::after {
+  content: "";
+  top: 50%;
+  right: 0;
+  margin-top: -10px;
+  position: absolute;
+  height: 20px;
+  width: 1px;
+  background-color: rgba(var(--asos-black-rgb), 0.1);
+}
+
+.button {
+  height: 49px;
+  width: 100%;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: var(--grey-70);
+  letter-spacing: 2px;
+  font-weight: 900;
+  background-color: var(--white);
+  border-style: none;
+  cursor: pointer;
+  padding: 0;
+  line-height: 50px;
+  box-sizing: border-box;
+}
+
+.button.selected {
+  color: var(--black);
+  border-bottom: 2px solid var(--black);
+}
+
+@media (--large-viewport) {
+  .container {
+    height: 100%;
+    padding: 0;
+    width: 230px;
+    border-bottom: none;
+  }
+
+  .container__large {
+    display: inline-block;
+  }
+
+  .container li {
+    width: 115px;
+    border-right: 1px solid var(--grey-00);
+    border-bottom: none;
+    box-sizing: border-box;
+  }
+
+  .container li:first-of-type {
+    border-left: 1px solid var(--grey-00);
+  }
+
+  .button {
+    height: 100%;
+    line-height: 60px;
+    width: 100%;
+    color: var(--white);
+    background-color: var(--black);
+    border-bottom: none;
+  }
+
+  .button.selected,
+  .button.selected:focus,
+  .button.selected:hover {
+    color: var(--white);
+    background-color: var(--grey-00);
+    border-bottom: none;
+    height: 100%;
+  }
+
+  .button:focus,
+  .button:hover {
+    color: var(--white);
+    background-color: var(--floor-nav-focus);
+  }
 }
